# nvidia-switch

./: Cargo.toml  README.md
src/: main.rs
