[package]
name = "nvidia-switch"
description = "Switch on or off your Nvidia GPU in your Linux machine."
authors = ["Maarifa Maarifa"]
repository = "https://github.com/MaarifaMaarifa/nvidia-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
